// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the title of the step and creates a new step 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -170,11 +170,11 @@
              \\"textTransform\\": \\"none\\",
            }
          }
          testID=\\"stepTitleInput\\"
          underlineColorAndroid=\\"transparent\\"
-         value=\\"Pray for Hayden's request.\\"
+         value=\\"Pray for Christian's super cool request!\\"
        />
        <View
          style={
            Array [
              Object {"
`;

exports[`should render correctly | Care Step 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="CloseButton"
        >
          <SvgMock
            color="#ffffff"
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        maxLength={255}
        multiline={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
        testID="stepTitleInput"
        underlineColorAndroid="transparent"
        value="Help with Hayden's request."
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ECEEF2",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "corporis repellat ratione",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(140, 123, 152)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Bold",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "letterSpacing": 1,
                  "lineHeight": 20,
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              Aaliyah Champlin
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#B4B6BA",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "lineHeight": 16,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
                testID="Text"
              >
                September 8, 2010 @ 6:46 AM
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Object {
                    "color": "#3CC8E6",
                    "fontSize": 12,
                    "paddingLeft": 10,
                  }
                }
                testID="openPostButton"
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 32,
                "paddingBottom": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  ut libero qui
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "ut nulla quam",
            }
          }
          style={
            Object {
              "aspectRatio": 2,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD TO MY STEPS
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render correctly | Pray Step 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="CloseButton"
        >
          <SvgMock
            color="#ffffff"
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          PRAY STEP
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        maxLength={255}
        multiline={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
        testID="stepTitleInput"
        underlineColorAndroid="transparent"
        value="Pray for Hayden's request."
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ECEEF2",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "corporis repellat ratione",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(140, 123, 152)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Bold",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "letterSpacing": 1,
                  "lineHeight": 20,
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              Aaliyah Champlin
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#B4B6BA",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "lineHeight": 16,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
                testID="Text"
              >
                September 8, 2010 @ 6:46 AM
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Object {
                    "color": "#3CC8E6",
                    "fontSize": 12,
                    "paddingLeft": 10,
                  }
                }
                testID="openPostButton"
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 32,
                "paddingBottom": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  ut libero qui
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "ut nulla quam",
            }
          }
          style={
            Object {
              "aspectRatio": 2,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD TO MY STEPS
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render correctly | Share Step 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="CloseButton"
        >
          <SvgMock
            color="#ffffff"
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          SHARE STEP
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        maxLength={255}
        multiline={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
        testID="stepTitleInput"
        underlineColorAndroid="transparent"
        value="Answer Hayden's question."
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ECEEF2",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "corporis repellat ratione",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(140, 123, 152)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Bold",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "letterSpacing": 1,
                  "lineHeight": 20,
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              Aaliyah Champlin
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#B4B6BA",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "lineHeight": 16,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
                testID="Text"
              >
                September 8, 2010 @ 6:46 AM
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Object {
                    "color": "#3CC8E6",
                    "fontSize": 12,
                    "paddingLeft": 10,
                  }
                }
                testID="openPostButton"
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <View
            style={
              Object {
                "marginHorizontal": 32,
                "paddingBottom": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  ut libero qui
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "ut nulla quam",
            }
          }
          style={
            Object {
              "aspectRatio": 2,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD TO MY STEPS
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;
